@@ -7,8 +7,9 @@
 // (C) 2007 Hector E. Gomez M
 //
 
-using System;
 using Gtk;
+using System;
+using System.IO;
 using Monodoc.Editor.Gui;
 using Monodoc.Editor.Utils;
 
@@ -33,27 +34,35 @@ public partial class EditorWindow : Gtk.Window {
 	private void OnOpenActivated(object sender, System.EventArgs e)
 	{
 		OpenDocDialog dialog = new OpenDocDialog ();
-		dialog.Run ();
-		
-		try {
-			MonoDocument doc = new MonoDocument (dialog.Document);
-			DocumentBufferArchiver.Deserialize (docEditView.Buffer, doc.Text);
-		} catch (ArgumentException argexp) {
-			Console.WriteLine (argexp.Message);
+		if (dialog.Run () == (int) ResponseType.Ok) {
+			try {
+				MonoDocument doc = new MonoDocument (dialog.Document);
+				DocumentBufferArchiver.Deserialize (docEditView.Buffer, doc.Text);
+			} catch (ArgumentException argexp) {
+				Console.WriteLine (argexp.Message);
+			}
 		}
+		
+		dialog.Destroy ();
 	}
 
 	private void OnSaveAsActivated (object sender, System.EventArgs e)
 	{
 		SaveDocDialog dialog = new SaveDocDialog ();
-		string xml = DocumentBufferArchiver.Serialize (docEditView.Buffer);
-		Console.WriteLine ("Serialize: \n" + xml);
+		if (dialog.Run () == (int) ResponseType.Ok) {
+			using (FileStream fileStream = new FileStream (dialog.Document, FileMode.CreateNew)) {
+				using (StreamWriter streamWriter = new StreamWriter (fileStream)) {
+					streamWriter.Write (DocumentBufferArchiver.Serialize (docEditView.Buffer));
+				}
+			}
+		}
+		
+		dialog.Destroy ();
 	}
 
 	private void OnSaveActivated (object sender, System.EventArgs e)
 	{
-		string xml = DocumentBufferArchiver.Serialize (docEditView.Buffer);
-		Console.WriteLine ("Serialize: \n" + xml);
+		Console.WriteLine ("Serialize: \n{0}", DocumentBufferArchiver.Serialize (docEditView.Buffer));
 	}
 }
 }
