@@ -201,7 +201,7 @@
       </widget>
     </child>
   </widget>
-  <widget class="Gtk.Dialog" id="Monodoc.Editor.SaveDocDialog" design-size="599 176">
+  <widget class="Gtk.Dialog" id="Monodoc.Editor.SaveDocDialog" design-size="779 599">
     <property name="MemberName" />
     <property name="WindowPosition">CenterOnParent</property>
     <property name="Buttons">2</property>
@@ -212,9 +212,10 @@
         <property name="MemberName" />
         <property name="BorderWidth">2</property>
         <child>
-          <widget class="Gtk.FileChooserWidget" id="filechooserwidget1">
+          <widget class="Gtk.FileChooserWidget" id="saveFileDialog">
             <property name="MemberName" />
             <property name="Action">Save</property>
+            <signal name="FileActivated" handler="OnSaveFileDialogFileActivated" />
           </widget>
           <packing>
             <property name="Position">0</property>
@@ -240,6 +241,7 @@
             <property name="StockId">gtk-cancel</property>
             <property name="IsDialogButton">True</property>
             <property name="ResponseId">-6</property>
+            <signal name="Clicked" handler="OnButtonCancelClicked" />
             <property name="label">gtk-cancel</property>
           </widget>
           <packing>
@@ -254,10 +256,11 @@
             <property name="CanFocus">True</property>
             <property name="UseStock">True</property>
             <property name="Type">StockItem</property>
-            <property name="StockId">gtk-ok</property>
+            <property name="StockId">gtk-save</property>
             <property name="IsDialogButton">True</property>
-            <property name="ResponseId">-5</property>
-            <property name="label">gtk-ok</property>
+            <property name="ResponseId">-1</property>
+            <signal name="Clicked" handler="OnButtonOkClicked" />
+            <property name="label">gtk-save</property>
           </widget>
           <packing>
             <property name="Position">1</property>
